--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.3.0
   google_maps_flutter: ^2.2.5
   cloud_firestore: ^4.5.0
+  firebase_storage: ^11.1.0
 
 dev_dependencies:
   flutter_test:
