--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_flutter: ^2.2.5
   cloud_firestore: ^4.5.0
   firebase_storage: ^11.1.0
+  firebase_messaging: ^14.4.0
 
 dev_dependencies:
   flutter_test:
