--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.5.0
   firebase_storage: ^11.1.0
   firebase_messaging: ^14.4.0
+  lottie: ^2.3.1
 
 dev_dependencies:
   flutter_test:
