--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 }
